--- a/prototype_sprint1/prototype_employee_list.html
+++ b/prototype_sprint1/prototype_employee_list.html
@@ -8,45 +8,54 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
             crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="table.css">
+    <link rel="stylesheet" href="employee_list.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
 
 <div class="container-fluid main-content">
+
     <div class="d-flex justify-content-between mt-3">
-        <a class="btn text-center" href="#"><i class="fa-solid fa-arrow-left"></i> Quay lại</a>
-        <h2 class="text-center">Quản lý nhân viên</h2>
-        <a class="btn"></a>
+        <button class="btn button-css" href="#"><i class="fa-solid fa-arrow-left"></i></button>
+        <h2 class="text-center col-sm-12">Quản lý nhân viên</h2>
+        <a class="button-css"></a>
     </div>
+
     <button class="btn btn-primary button-css col-md-1" type="button" href="/">Thêm mới</button>
+
     <div class="row mt-2">
         <form>
-            <label class="col-md-1 text-center" for="codeEmployee">Mã NV</label>
-            <input class="form-control-sm col-md-1" type="search" id="codeEmployee" name="codeEmployee"
+            <div class="d-inline">
+            <label class="col-md-1 text-end" for="codeEmployee">Mã NV</label>
+            <input class="form-control select col-md-1" type="search" id="codeEmployee" name="codeEmployee"
                    placeholder="Mã nhân viên">
-            <label class="col-md-1 text-center" for="nameEmployee">Tên NV</label>
-            <input class="form-control-sm col-md-2" type="search" id="nameEmployee" name="nameEmployee"
+            </div>
+            <div class="d-inline">
+            <label class="col-md-1 text-end" for="nameEmployee">Tên NV</label>
+            <input class="form-control select col-md-2" type="search" id="nameEmployee" name="nameEmployee"
                    placeholder="Tên nhân viên">
-            <label class="col-md-1 text-center" for="position">Chức vụ</label>
-            <select class="form-select select col-md-2" name="position" id="position"
-                    aria-label="Default select example">
-                <option value="" selected>Chức vụ</option>
+            </div>
+            <div class="d-inline">
+            <label class="col-md-1 text-end" for="position">Chức vụ</label>
+            <select class="form-select select col-md-2" name="position" id="position">
+                <option value="" >Chức vụ</option>
                 <option value="1">Trưởng phòng</option>
                 <option value="2">Quản lý</option>
                 <option value="3">Kế toán</option>
                 <option value="4">Nhân viên</option>
             </select>
-            <label class="col-md-1 text-center" for="emailEmployee">Email</label>
-            <input class="form-control-sm col-md-2" type="search" id="emailEmployee" name="emailEmployee"
+            </div>
+            <div class="d-inline">
+            <label class="col-md-1 text-end" for="emailEmployee">Email</label>
+            <input class="form-control select col-md-2" type="search" id="emailEmployee" name="emailEmployee"
                    placeholder="Email">
-            <button class="btn button-css btn-outline-danger col-md-1 align-items-center" type="submit">Tìm kiếm</button>
+            </div>
+            <button class="btn button-css btn-outline-danger col-md-1" type="submit">Tìm kiếm</button>
         </form>
     </div>
 
-
     <table class="table table-light table-striped mt-3">
-        <thead>
+        <thead class="text-center">
         <tr>
             <th scope="col">Mã nhân viên</th>
             <th scope="col">Họ tên</th>
@@ -59,7 +68,7 @@
             <th scope="col">Sửa</th>
         </tr>
         </thead>
-        <tbody>
+        <tbody class="text-center">
         <tr>
             <td>NV-001</td>
             <td>Nguyễn Văn An</td>
@@ -136,16 +145,12 @@
     </table>
 
     <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-end">
-            <li class="page-item disabled">
-                <a class="page-link">Trước</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <ul class="pagination d-flex justify-content-end">
+            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+            <li class="page-item active"><a class="page-link" href="#">1</a></li>
             <li class="page-item"><a class="page-link" href="#">2</a></li>
             <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#">Sau</a>
-            </li>
+            <li class="page-item"><a class="page-link" href="#">Next</a></li>
         </ul>
     </nav>
 </div>
@@ -159,7 +164,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <span>Bạn có muốn xóa nhân viên này không ?</span>
+                <span>Bạn có muốn xóa nhân viên <span></span> không ?</span>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-warning" data-bs-dismiss="modal">Đóng</button>
